# modely

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: modely-ai.md
docs/: enterprise-platform-roadmap.html  governance.md
docs/examples/: github-actions.yml  policy.json
docs/integrations/: dvc.md  git-lfs.md  github.md  gitlab.md  huggingface.md  inference-platform.md  jenkins.md  kaggle.md  mlflow.md  modelscope.md  training-platform.md
docs/specs/: aggregate-governance.md  enterprise-api.md  enterprise-cli.md  enterprise-deployment-ops.md  enterprise-domain-model.md  enterprise-governance.md  enterprise-identity.md  enterprise-multitenancy-isolation.md  enterprise-platform-code-structure.md  enterprise-platform-mvp.md  enterprise-security-threat-model.md
src/modely/: __init__.py  analyze.py  audit.py  auth.py  backend_registry.py  backends.py  batch.py  benchmark.py  (+34 more)
tasks/: plan.md  todo.md
tests/: test_analyze.py  test_audit.py  test_auth.py  test_backend_registry.py  test_batch_download.py  test_cache.py  test_cache_web.py  test_capabilities.py  test_card.py  test_catalog.py  test_choose.py  test_cli.py  test_compare.py  test_compare_many.py  test_detail.py  test_doctor.py  test_download_urls.py  test_enterprise_api.py  test_enterprise_boundaries.py  test_enterprise_ci_gate.py  test_enterprise_compatibility.py  test_enterprise_domain_model.py  test_enterprise_governance.py  test_enterprise_integrations.py  test_enterprise_intelligence.py  test_enterprise_lockfile.py  test_enterprise_manifest_diff.py  test_enterprise_multitenant_worker.py  test_enterprise_policy.py  test_enterprise_resolver.py  test_enterprise_sdk.py  test_enterprise_snapshots.py  test_enterprise_tokens.py  test_facade_compatibility.py  test_files.py  test_get.py  test_governance_approvals.py  test_governance_audit.py  test_governance_core.py  test_info.py  (+32 more)
(+198 files in other folders)
