[project]
name = "modely-ai"
version = "0.1.1"
description = "AI models download in one command"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25.0",
    "tqdm>=4.62.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["modely*"]

[project.scripts]
modely-ai = "modely:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require network access (deselect with '-m \"not integration\"')",
]
