[project]
name = "modely-ai"
version = "0.1.1"
description = "Cross-platform AI model and dataset asset manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25.0",
    "tqdm>=4.62.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
server = ["fastapi>=0.100.0", "uvicorn>=0.23.0"]
modelscope = ["modelscope>=1.0.0"]
kaggle = ["kaggle>=1.6.0"]
web = []  # Frontend served from pre-built dist/; Node.js required only for development

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["modely*"]

[tool.setuptools.package-data]
"modely.server.web" = [
    "dist/**/*",
    "package.json",
    "vite.config.ts",
    "tsconfig.json",
    "index.html",
    "public/**/*",
]

[project.scripts]
modely-ai = "modely:main"
modely-server = "modely.server.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require network access (deselect with '-m \"not integration\"')",
]
